Bug 648561 - Web influencer page is broken in IE8
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@87510 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/webhero.css
+++ b/style/covehead/webhero.css
@@ -10,6 +10,8 @@
 	font-style: normal;
 }
 
+section,article { display: block; }
+
 #webhero-wrap { margin-top: 20px; padding-top: 605px; position: relative; font-size: 16px; line-height: 1.375; background: url("/img/firefox/webhero/webhero.jpg") 0 200px no-repeat; }
 #webhero .page-title { position: absolute; left: -999em; }
 #webhero h2 { margin: 0 0 .15em; font: normal 48px/.9 "League Gothic", Haettenschweiler, "Arial Narrow", sans-serif; text-transform: uppercase; color: #506071; }
